# codeverse-personal-python

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  codeverse-urun-spesifikasyonu.md  docker-compose.yml
.claude/: launch.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_module_progress.py
backend/src/: test_api_taxonomy_real.py
backend/src/codeverse_api/: config.py  dependencies.py  main.py
backend/src/codeverse_api/db/: base.py  models.py
backend/src/codeverse_core/: __init__.py  concepts.py
backend/src/codeverse_sandbox/: __init__.py  docker_runner.py  limits.py  runtime_registry.py
backend/tests/: conftest.py
backend/tests/golden/: test_concept_coverage.py  util.py
backend/tests/integration/: test_api.py
backend/tests/sandbox/: test_docker_sandbox.py
backend/tests/unit/: test_clarifying_questions.py  test_cvl_format.py  test_dictionary_quality.py  test_error_translation.py  test_execute_fallback.py  test_execution_safety.py  test_lexer.py  test_openai_compatible_provider.py  test_parser.py  test_personal_python_learning.py  test_personal_python_lesson.py  test_pipeline.py  test_real_code_flow.py  test_sandbox_runtime.py  test_sql_codegen_contract.py  test_sql_runtime_assets.py  test_taxonomy_codegen.py  test_taxonomy_descriptions.py  test_taxonomy_generator.py  test_taxonomy_loader.py  test_taxonomy_prompts.py  test_taxonomy_validator.py  test_theme_families.py  test_theme_repository.py  test_theme_validator.py  test_translation_trace.py  test_uasl_validation.py
(+1249 files in other folders)
