[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeverse"
version = "0.1.0"
description = "CodeVerse - theme-personalized syntax layer compiled to real, runnable code"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "docker>=7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codeverse_core = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require a running Docker daemon (deselect with '-m \"not docker\"')",
    "llm: tests that require a real LLM API key",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
